# fs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fs.c  fs.h
.github/workflows/: ci.yml
camal/: fs.camal
docs/: api.md
examples/: archives.c  hello_world.c  mounting.c
extras/backends/mem/: fs_mem.c  fs_mem.h
extras/backends/pak/: fs_pak.c  fs_pak.h
extras/backends/posix/: fs_posix.c  fs_posix.h
extras/backends/sub/: fs_sub.c
extras/backends/subfs/: fs_sub.c  fs_sub.h  fs_subfs.c  fs_subfs.h
extras/backends/win32/: fs_win32.c  fs_win32.h
extras/backends/zip/: fs_zip.c  fs_zip.h
tests/: fs_test.c  fstest.c
tests/files/: codegen.sh  test1.zip.c  test2.zip.c
tools/: fsdoc.c  fsu.c
